<resources>
    <string name="app_name">FoIA</string>
    <string name="login_user_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_confirm_password_hint">Confirm Password</string>
    <string name="login_button">Log In</string>
    <string name="full_name_hint">Full Name</string>
    <string name="signup_button">Sign Up</string>
    <string name="back_button_description">Arrow pointing to the left.</string>
    <string name="welcome_area_text">Welcome again.</string>
    <string name="placeholder_description">placeholder</string>

    <string name="description">Description</string>
    <string name="recommendations">Recommendations</string>
    <string name="products">Products</string>

    <!--string usada para teste, substituir por texto real-->
    <string name="test_text">Red Ladybug</string>
    <string name="description_text">Ela é pequena, de cor branca translúcida, com asas cobertas por um pó branco. Este tipo de mosca branca é conhecido por causar danos significativos às plantas ao se alimentar da seiva, o que pode resultar em perda de vigor, amarelecimento das folhas e transmissão de vírus.</string>"
    <string name="recommendation_text">Rotação de Culturas Remoção de Plantas Infestadas Introduzir pedrador: joaninha, fungos, como Beauveria bassiana Telas de Proteção</string>"


</resources>