<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.FoIA">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/logo_unlogged"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_user_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="18dp"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/eye_button_click"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                app:layout_constraintVertical_bias="0.7"
                android:clickable="true"
                android:focusable="true"
                style="@style/EyeButtonClick" >

                <ToggleButton
                    android:id="@+id/eye_button"
                    style="@style/EyeButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="10dp"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="false"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_confirm_password_hint"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <ImageButton-->
<!--                android:id="@+id/eye_button_confirm"-->
<!--                style="@style/EyeButton"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginStart="270dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:background="@drawable/ripple_light_effect"-->
<!--                android:padding="2dp"-->
<!--                android:scaleType="fitCenter"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.60" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/eye_button_confirm_click"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                app:layout_constraintVertical_bias="0.7"
                android:clickable="true"
                android:focusable="true"
                style="@style/EyeButtonClick">

                <ToggleButton
                    android:id="@+id/eye_button_confirm"
                    style="@style/EyeButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="10dp"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="false"/>

<!--                <ImageView-->
<!--                    android:id="@+id/ripple_bg_confirm"-->
<!--                    android:contentDescription="@string/placeholder_description"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:srcCompat="@drawable/ripple_light_effect"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/signup_button"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/login_back_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:adjustViewBounds="true"
        android:background="@drawable/ripple_light_effect"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        style="@style/BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>